# signlang-detector

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: main.py  schemas.py  state.py
api/routes/: analytics.py  predict.py  stream.py
data/: analysis.ipynb  dataset.py  preprocess.py
database/: crud.py  db.py  models.py
docker/: Dockerfile
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MODELS.md
frontend/: analytics.js  index.html  stream.js
models/: cnn_model.py  ensemble.py  rf_model.py  yolo_model.py
notebooks/: analysis.ipynb
pipeline/: classifier.py  detector.py  regional.py  translator.py
scripts/: download_data.py  evaluate.py  realtime.py  train.py
tests/: test_api.py  test_pipeline.py
